# ERAV4

./: .gitignore  ReadMe.md
assignment-5/: EnvironmentSetup.md  MNIST_Classifier_Final.ipynb  MNIST_Classifier_v1.ipynb  MNIST_Classifier_v2.ipynb  ReadMe.md  TrainingHelper.py  Visualization.py  pyproject.toml
assignment6/: ReadMe.md  data.py  helper.py  model.py  train.py
assignment7/: CIFAR10_Training_Notebook.ipynb  COLAB_ERAV4_Assignment7.ipynb  LOCAL_ERAV4_Assignment7.ipynb  README.md  config.py  data.py  main.py  model.py  requirements.txt  test_training.py  trainer.py  utils.py
