[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["assignment_5"]

[project]
name = "mnist-classifier"
version = "1.0.0"
description = "MNIST Handwritten Digit Classification with CNN Architecture Comparison"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "ERA V4 Assignment 5", email = "assignment@era-v4.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
requires-python = ">=3.9"
dependencies = [
    "torch==2.8.0",
    "torchvision==0.23.0",
    "torchsummary==1.5.1",
    "numpy>=1.24.0,<2.0.0",
    "matplotlib==3.9.4",
    "pillow==11.3.0",
    "tqdm==4.67.1",
    "requests==2.32.4",
    "packaging==25.0",
]

[project.optional-dependencies]
dev = [
    "jupyter==1.1.1",
    "ipykernel==6.30.1",
    "ipython==8.18.1",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "pytest>=7.0.0",
]
all = [
    "mnist-classifier[dev]",
]

# No console scripts needed for this simple setup

[project.urls]
Homepage = "https://github.com/your-username/ERAV4-assignment-5"
Repository = "https://github.com/your-username/ERAV4-assignment-5"
Issues = "https://github.com/your-username/ERAV4-assignment-5/issues"

[tool.uv]
dev-dependencies = [
    "jupyter==1.1.1",
    "ipykernel==6.30.1",
    "ipython==8.18.1",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "pytest>=7.0.0",
]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    ".eggs",
    "*.egg",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
